--- a/_config.yml
+++ b/_config.yml
@@ -17,7 +17,7 @@ defaults:
 description: Chill ass dude
 author:
   name:
-  email: unlv.elements@gmail.com
+  email:
   github: superfuji57
   twitter: andy_juan
   pinterest:
