colors and gravatar

--- a/_config.yml
+++ b/_config.yml
@@ -22,8 +22,8 @@ author:
   twitter: andy_juan
   pinterest:
   linkedin: andy-won
-  bio: Coffee in; sarcasm out
-  email_md5: 
+  bio: Coffee and windmills
+  email_md5: ba35be9a1954673c08f81b92f038bc09
 
 rss_path: feed.xml
 categories_path: categories.html
