--- a/_config.yml
+++ b/_config.yml
@@ -44,7 +44,7 @@ owner:
   bing-verify: 
   github: superfuji57
   stackoverflow: #http://stackoverflow.com/users/123456/username
-  linkedin: andy-won
+  linkedin: andywon
   instagram: andy_juan
   lastfm: #username
  
