--- a/_config.yml
+++ b/_config.yml
@@ -31,7 +31,7 @@ owner:
   avatar: bio-photo.jpg
   bio: "Cool, calm, just like my mom"
   email: andy.won@gmail.com
-  disqus-shortname: andrewwon
+  disqus-shortname: andywonnyc
   twitter: andy_juan
   facebook: #username
   google:
