--- a/_config.yml
+++ b/_config.yml
@@ -29,7 +29,7 @@ kramdown:
 owner:
   name: Andy Won
   avatar: bio-photo.jpg
-  bio: Getting better at getting better.
+  bio: Finder of things
   email: andy.won@gmail.com
   disqus-shortname: andywonnyc
   twitter: andy_juan
